# powermode-tray

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  resources.rc
.cargo/: config.toml
.github/workflows/: release.yml
design/: windows11-energy-saver-detection.md
src/: debug.rs  main.rs  menu.rs  power.rs  tray.rs  util.rs
